--- a/WPFClient/App.xaml
+++ b/WPFClient/App.xaml
@@ -2,8 +2,35 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFClient"
-             StartupUri="MainWindow.xaml">
+             xmlns:view="clr-namespace:WPFClient.Views"
+             xmlns:vm="clr-namespace:WPFClient.ViewModels">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type vm:VM_Login}">
+            <view:UserControlLogin/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VM_GeneralInfo}">
+            <view:UserControlGeneralInfo/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VM_OrderMainView}">
+            <view:UserControlOrderMainView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VM_OrderQuickCheck}">
+            <view:UserControlOrderQuickCheck/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VM_OrdersByAllTables}">
+            <view:UserControlOrdersByAllTables/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VM_OrdersByHalls}">
+            <view:UserControlOrdersByHalls/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VM_OrdersByWaiters}">
+            <view:UserControlOrdersByWaiters/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VM_Payment}">
+            <view:UserControlPayment/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
+
+    
+    
