--- a/WPFClient/Views/UserControlOrdersByWaiters.xaml
+++ b/WPFClient/Views/UserControlOrdersByWaiters.xaml
@@ -30,7 +30,60 @@
         </UniformGrid>
 
         <Border>
+            <DockPanel>
+                <Border DockPanel.Dock="Top" Background="LightGray" Height="60">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Margin="5" HorizontalAlignment="Left">
+                                <Run FontWeight="Bold" FontSize="12" Text="Борденюк Світлана"/><!--Binding до імені офіціанта-->
+                                <LineBreak/>
+                                <Run FontSize="12" Text="Зміна відкрита:"/><!--Binding до дати та часу відкриття зміни-->
+                                <LineBreak/>
+                                <Run FontSize="12" Text="Сума:"/><!--Binding до загальної суми всіх відкритих чеків-->
+                            </TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right">
+                            <Button x:Name="PreviousCheckButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Попередній чек" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="DeleteButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Видалення" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="TransferButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Перенесення" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="DeliveryButton" HorizontalAlignment="Right" Height="60" Width="120" Content="1" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>           <!--Додати іконки до цих кнопок-->
+                            <Button x:Name="MenuButton" HorizontalAlignment="Right" Height="60" Width="120" Content="2" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="OtherButton" HorizontalAlignment="Right" Height="60" Width="120" Content="3" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+                <Border DockPanel.Dock="Bottom" Background="Gray" Height="60">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="7*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button x:Name="BackButton" HorizontalAlignment="Left" Height="60" Width="120" Content="Назад" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button x:Name="HallSchemeButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Схема зали" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="AllTableButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Всі столи" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>      <!--Додати іконки до цих кнопок-->
+                            <Button x:Name="ByWaitersButton" HorizontalAlignment="Right" Height="60" Width="120" Content="За офіціантами" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="QuickCheckButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Швидкий чек" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                        </StackPanel>
+                    </Grid>
+                    
+                </Border>
+                <Border Background="Wheat">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="3*"/>
+                        </Grid.ColumnDefinitions>
+                        <ListBox Background="Transparent" BorderBrush="Transparent">
 
+                        </ListBox>
+                    </Grid>
+                </Border>
+            </DockPanel>
         </Border>
 
     </DockPanel>
