--- a/WPFClient/Views/UserControlOrdersByWaiters.xaml
+++ b/WPFClient/Views/UserControlOrdersByWaiters.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPFClient.Views"
              xmlns:vm="clr-namespace:WPFClient.ViewModels"
+             xmlns:Ext="clr-namespace:Ext"
              d:DataContext="{d:DesignInstance Type=vm:VM_OrdersByWaiters}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -47,12 +48,12 @@
                             </TextBlock>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right">
-                            <Button x:Name="PreviousCheckButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Попередній чек" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
-                            <Button x:Name="DeleteButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Видалення" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
-                            <Button x:Name="TransferButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Перенесення" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
-                            <Button x:Name="DeliveryButton" HorizontalAlignment="Right" Height="60" Width="120" Content="1" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>           <!--Додати іконки до цих кнопок-->
-                            <Button x:Name="MenuButton" HorizontalAlignment="Right" Height="60" Width="120" Content="2" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
-                            <Button x:Name="OtherButton" HorizontalAlignment="Right" Height="60" Width="120" Content="3" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="PreviousCheckButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Попередній чек" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Check.png"/>
+                            <Button x:Name="DeleteButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Видалення" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/TrashCan.png"/>
+                            <Button x:Name="TransferButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Перенесення" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/OrderRescheduling.png"/>
+                            <Button x:Name="DeliveryButton" HorizontalAlignment="Right" Height="60" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Delivery.png"/>
+                            <Button x:Name="MenuButton" HorizontalAlignment="Right" Height="60" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Menu.png"/>
+                            <Button x:Name="OtherButton" HorizontalAlignment="Right" Height="60" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Lock.png"/>
                         </StackPanel>
                     </Grid>
                 </Border>
@@ -62,12 +63,12 @@
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="7*"/>
                         </Grid.ColumnDefinitions>
-                        <Button x:Name="BackButton" HorizontalAlignment="Left" Height="60" Width="120" Content="Назад" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                        <Button x:Name="BackButton" HorizontalAlignment="Left" Height="60" Width="120" Content="Назад" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Back.png"/>
                         <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                            <Button x:Name="HallSchemeButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Схема зали" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
-                            <Button x:Name="AllTableButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Всі столи" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>      <!--Додати іконки до цих кнопок-->
-                            <Button x:Name="ByWaitersButton" HorizontalAlignment="Right" Height="60" Width="120" Content="За офіціантами" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
-                            <Button x:Name="QuickCheckButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Швидкий чек" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                            <Button x:Name="HallSchemeButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Схема зали" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/HallScheme.png"/>
+                            <Button x:Name="AllTableButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Всі столи" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Table.png"/>
+                            <Button x:Name="ByWaitersButton" HorizontalAlignment="Right" Height="60" Width="120" Content="За офіціантами" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Waiter.png"/>
+                            <Button x:Name="QuickCheckButton" HorizontalAlignment="Right" Height="60" Width="120" Content="Швидкий чек" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/CheckWhite.png"/>
                         </StackPanel>
                     </Grid>
                     
