--- a/WPFClient/Views/UserControlGeneralInfo.xaml
+++ b/WPFClient/Views/UserControlGeneralInfo.xaml
@@ -3,11 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:local="clr-namespace:WPFClient.Views"
              xmlns:vm="clr-namespace:WPFClient.ViewModels"
              d:DataContext="{d:DesignInstance Type=vm:VM_GeneralInfo}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName = "Loaded">
+            <i:InvokeCommandAction Command = "{Binding AfterLoadedCmd }"/>
+        </i:EventTrigger>
+        <!--<i:EventTrigger EventName = "StateChanged">
+            <i:InvokeCommandAction Command = "{Binding StateChangedCommand}"/>
+        </i:EventTrigger>-->
+    </i:Interaction.Triggers>
     <DockPanel>
         <Label
             DockPanel.Dock="Top"
@@ -18,6 +27,7 @@
              FontSize="14" FontFamily="Georgia" 
              FontWeight="Bold"
              Content="{Binding Title}"/>
+        <TextBlock Text="{Binding GeneralInfoTM.NewProp}"></TextBlock>
         <UniformGrid DockPanel.Dock="Bottom" Rows="1">
             <Button                
                  Content="Login"
