--- a/WPFClient/Views/UserControlOrdersByAllTables.xaml
+++ b/WPFClient/Views/UserControlOrdersByAllTables.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPFClient.Views"
              xmlns:vm="clr-namespace:WPFClient.ViewModels"
+             xmlns:Ext="clr-namespace:Ext"
              d:DataContext="{d:DesignInstance Type=vm:VM_OrdersByAllTables}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
