--- a/WPFClient/MainWindow.xaml
+++ b/WPFClient/MainWindow.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFClient"
+        xmlns:vm="clr-namespace:WPFClient.ViewModels"
+        d:DataContext="{d:DesignInstance Type=vm:VM_MainWindow}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding CurrentPageViewModel.Title}" Height="450" Width="800">
     <Grid>
         <ContentControl Content="{Binding CurrentPageViewModel}" />
     </Grid>
