--- a/WPFClient/Views/UserControlOrdersByAllTables.xaml
+++ b/WPFClient/Views/UserControlOrdersByAllTables.xaml
@@ -6,37 +6,11 @@
              xmlns:local="clr-namespace:WPFClient.Views"
              xmlns:vm="clr-namespace:WPFClient.ViewModels"
              xmlns:Ext="clr-namespace:Ext"
-             d:DataContext="{d:DesignInstance Type=vm:VM_OrdersByAllTables}"
+             d:DataContext="{d:DesignInstance Type=vm:VM_Orders}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
-        <Label
-            DockPanel.Dock="Top"
-             Name="View1" 
-             VerticalAlignment="Top" HorizontalAlignment="Center"
-             Height="40" 
-             Canvas.Left="10" Canvas.Top="10" 
-             FontSize="14" FontFamily="Georgia" 
-             FontWeight="Bold"
-             Content="{Binding Title}"/>
-        <UniformGrid DockPanel.Dock="Bottom" Rows="1">
-            <Button                
-                 Content="OrdersByHalls"
-                 Command="{Binding GoToOrdersByHalls}"
-                 Width="90" Height="30" Margin="0,20" />
-            <Button                
-                 Content="GeneralInfo"
-                 Command="{Binding GoToGeneralInfo}"
-                 Width="90" Height="30" Margin="0,20" />
-            <Button                
-                 Content="OrderMainView"
-                 Command="{Binding GoToOrderMainView}"
-                 Width="90" Height="30" Margin="0,20" />
-        </UniformGrid>
-
-        <Border>
-
-        </Border>
-
+        <Label Content=" By all tables"/>
+        <TextBlock Text="{Binding Title}"></TextBlock>
     </DockPanel>
 </UserControl>
