--- a/WPFClient/Views/UserControlPayment.xaml
+++ b/WPFClient/Views/UserControlPayment.xaml
@@ -10,32 +10,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
-        <Label
-                DockPanel.Dock="Top"
-                 Name="View1" 
-                 VerticalAlignment="Top" HorizontalAlignment="Center"
-                 Height="40" 
-                 Canvas.Left="10" Canvas.Top="10" 
-                 FontSize="14" FontFamily="Georgia" 
-                 FontWeight="Bold"
-                 Content="{Binding Title}"/>
-        <UniformGrid DockPanel.Dock="Bottom" Rows="1">
-            <Button                
-                 Content="GeneralInfo"
-                 Command="{Binding GoToGeneralInfo}"
-                 Width="90" Height="30" Margin="0,20" />
-            <Button                
-                 Content="OrderQuickCheck"
-                 Command="{Binding GoToOrderQuickCheck}"
-                 Width="90" Height="30" Margin="0,20" />
-        </UniformGrid>
-
         <Border>
             <DockPanel>
                 <DockPanel x:Name="TopDockPanel" DockPanel.Dock="Top" Height="60" Background="White">
                     <UniformGrid DockPanel.Dock="Right" Rows="1" HorizontalAlignment="Right">
                         <Button Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Menu.png"></Button>
-                        <Button Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Lock.png"></Button>
+                        <Button Width="120" Command="{Binding GoToLogin}" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Lock.png"></Button>
                     </UniformGrid>
                     <Grid DockPanel.Dock="Left" HorizontalAlignment="Left">
                         <Grid.RowDefinitions>
@@ -55,8 +35,8 @@
                 </DockPanel>
 
                 <DockPanel x:Name="BottomDockPanel" DockPanel.Dock="Bottom" Height="60" Background="#FF303030">
-                    <Button DockPanel.Dock="Left" HorizontalAlignment="Left" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Back.png" Foreground="White">Назад</Button>
-                    <Button DockPanel.Dock="Left" HorizontalAlignment="Left" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Dish.png" Foreground="White">Замовлення</Button>
+                    <Button DockPanel.Dock="Left" Command="{Binding GoToPreviusPage}" HorizontalAlignment="Left" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Back.png" Foreground="White">Назад</Button>
+                    <Button DockPanel.Dock="Left" Command="{Binding GoToOrderMainView}" HorizontalAlignment="Left" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Dish.png" Foreground="White">Замовлення</Button>
                     <Button DockPanel.Dock="Left" HorizontalAlignment="Left" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/CheckWhite.png" Foreground="White">З товарним чеком</Button>
                     <Button DockPanel.Dock="Left" HorizontalAlignment="Left" Width="120" Style="{StaticResource ImageButton}" Ext:CustomButton.Image="/ResourceDictionaries/Image/Airplane.png" Foreground="White">Відправлення чека</Button>
                     <DockPanel DockPanel.Dock="Right" HorizontalAlignment="Right">
