--- a/WPFClient/Views/Subviews/ChooseTableWindow.xaml
+++ b/WPFClient/Views/Subviews/ChooseTableWindow.xaml
@@ -4,9 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFClient.Views.Subviews"
+        xmlns:vm="clr-namespace:WPFClient.ViewModels"
+        xmlns:Ext="clr-namespace:Ext"
+        d:DataContext="{d:DesignInstance Type=vm:VM_Orders}"
         mc:Ignorable="d"
         Title="ChooseTableWindow" Height="450" Width="800">
     <Grid>
-        
+        <ContentControl Content="{Binding}" />
+
     </Grid>
 </Window>
