--- a/WPFClient/Views/UserControlGeneralInfo.xaml
+++ b/WPFClient/Views/UserControlGeneralInfo.xaml
@@ -22,8 +22,10 @@
         <Border DockPanel.Dock="Top">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{Binding CurrentEmployeeModel.Name}"/>
-                <TextBlock Text="Зміна відкрита: "/>
-                <TextBlock Text=""/>
+                <TextBlock Text="{Binding IsOpenedWorkShift}"/>
+                <Button Command="{Binding OpenWorkShiftEmployeeCmd}">Відкрити зміну</Button>
+                <Button Command="{Binding CloseWorkShiftEmployeeCmd}">Закрити зміну</Button>
+
             </StackPanel>
         </Border>
         <UniformGrid DockPanel.Dock="Bottom" Rows="1">
